# rag-retrieval-quality-lab

./: .gitignore  DEBRIEF.md.j2  Makefile  README.md  README.md.j2  pyproject.toml  template.yaml  translucid-template.json
.github/workflows/: template-validation.yml
candidate/: Makefile  README.md  docker-compose.yml  pyproject.toml
candidate/fixtures/public/: documents.jsonl  expected_contract.json  queries.jsonl  tenants.json
candidate/simulators/: fake_embedding_api.py
candidate/src/: __init__.py  app.py  citations.py  config.py  embedding_client.py  eval_runner.py  indexer.py  metadata_store.py  ranker.py  report.py  retriever.py  storage.py
candidate/tests/public/: test_integration_rag.py  test_unit_contract.py
docs/: template_progress.md  template_rules.md
evaluator/: docker-compose.evaluator.yml  rubric.md  run_hidden.sh  run_public.sh
evaluator/fixtures_hidden/: documents_hidden.jsonl
evaluator/tests_hidden/: conftest.py  test_citation_grounding.py  test_freshness_ranking.py  test_no_hardcoding.py  test_tenant_isolation.py
generators/: generate_fixture.py  scenarios.yaml
metadata/: safety_policy.json  source_mapping_rules.json
solution/: SOLUTION.md.j2  pyproject.toml
solution/expected/: public-summary.json
solution/src/: __init__.py  citations.py  eval_runner.py  ranker.py  retriever.py
solution/tests/: reference_test.py
source-dossiers/: rag-retrieval-quality-lab.md
tools/: expect_candidate_docker_failure.sh  expect_candidate_failure.sh  render_template.py  scan_safety.py
