[project]
name = "translucid-template-rag-retrieval-quality-lab"
version = "0.1.0"
description = "Internal Translucid template for RAG retrieval quality challenge generation."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["candidate/tests/public", "solution/tests", "evaluator/tests_hidden"]
pythonpath = ["."]
