[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-retrieval-quality-lab-candidate"
version = "0.1.0"
description = "Candidate starter for Translucid RAG Retrieval Quality Lab."
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.34",
  "fastapi>=0.111",
  "psycopg[binary]>=3.2",
  "pytest>=8.2",
  "requests>=2.32",
  "uvicorn>=0.30"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "simulators*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests/public"]
